src/scss/pages/case.scss
@use "sass:color";
@use "sass:math";
@use "mixins" as *;
@use "variables" as *;
@use "fonts";
@use "icons";

.heading {
    padding: 0.5rem 0 1rem;

    &.heading--blog {
        padding: 1.75rem 0 1rem;

        @media (min-width:$md4) {
            padding: 1rem 0 1rem;
        }

        .heading__title {
            margin-top: 2.5rem;
            line-height: 120%;
        }

        .heading__container {
            @media (min-width:$md2) {
                gap: 2.5rem;
            }
        }

        .heading__description {
            color: #7C8698;
            font-size: 1rem;
            font-weight: 300;
            line-height: 120%;
        }

        .heading__image {
            display: block;

            @media (max-width:$md3) {
                height: auto;
                width: 100%;
            }

            @media (min-width:$md3) {
                min-height: rem(364);
            }
        }

        .heading__main {
            @media (min-width:$md2) {
                flex: 0 0 rem(477);
            }
        }
    }

    @media (min-width:$md4) {
        padding: 0.5rem 0 2rem;
    }

    // .heading__container
    &__container {
        gap: 1.5rem;
        display: grid;

        @media (min-width:$md3) {
            grid-template-columns: repeat(2, 1fr);
        }

        @media (min-width:$md2) {
            display: flex;
            gap: rem(100);
        }
    }

    // .heading__main
    &__main {
        @media (min-width:$md2) {
            flex: 0 0 rem(500);
        }
    }

    // .heading__categories
    &__categories {
        display: flex;
        flex-wrap: wrap;
        gap: 0.25rem;

    }

    // .heading__category
    &__category {}

    // .heading__title
    &__title {
        margin-top: 2rem;

        &.title-sm {
            @media (max-width:$md4) {
                font-size: 2.125rem;
            }
        }
    }

    // .heading__description
    &__description {
        margin-top: 1rem;
        color: #7C8698;
        font-size: 1.125rem;
        font-weight: 300;
        line-height: 135%;
    }

    // .heading__actions
    &__actions {
        margin-top: 2rem;
        display: flex;
        gap: 0.5rem;
        flex-direction: column;

        @media (min-width:$md5) {
            gap: 1rem;
            flex-direction: row;
        }
    }

    // .heading__btn
    &__btn {}

    // .heading__image
    &__image {
        display: none;

        @media (min-width:$md3) {
            display: block;
            height: rem(305);
            width: 100%;
            border-radius: 1rem;
            overflow: hidden;

        }
    }

    // .heading__stats
    &__stats {
        margin-top: 2.5rem;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        align-items: start;
        order: 1;

        @media (min-width:$md3) {
            order: 0;
        }
    }

    // .heading__stats-item
    &__stats-item {
        color: #7C8698;
        font-size: 0.875rem;
        line-height: 120%;
        display: flex;
        gap: 0.5rem;

        @media (min-width:$md4) {}

        &::before {
            width: 1rem;
            height: 1.3rem;
            font-size: 1rem;
            align-content: center;
            flex-shrink: 0;
            color: #16EEDC;
        }

    }

    // .heading__author
    &__author {
        margin-top: 2.5rem;
        display: flex;
        gap: 1rem;
        align-items: center;
    }

    // .heading__author-thumb
    &__author-thumb {
        border-radius: 0.5rem;
        background: #FFF;
        overflow: hidden;
        flex-shrink: 0;
        width: 3rem;
        height: 3rem;
    }

    // .heading__author-details
    &__author-details {}

    // .heading__author-name
    &__author-name {
        font-size: 0.875rem;
        font-weight: 600;
        line-height: 100%;
    }

    // .heading__author-position
    &__author-position {
        margin-top: 0.5rem;
        color: #7C8698;
        font-size: 0.8125rem;
        line-height: 100%;
    }
}



.features {
    padding: 1rem 0 rem(40);

    @media (min-width:$md2) {
        padding: 2rem 0 rem(40);

    }

    // .features__list
    &__list {
        display: grid;
        gap: 1rem;

        @media (min-width:$md4) {
            grid-template-columns: repeat(3, 1fr);
        }
    }

    // .features__card
    &__card {
        border-radius: 0.5rem;
        border: rem(1) solid #F2F2F2;
        background: #FFF;
        display: flex;
        text-align: center;
        flex-direction: column;
        align-items: center;
        gap: 1rem;
        padding: 2rem;
    }

    // .features__card-caption
    &__card-caption {
        font-size: 0.875rem;
        line-height: 100%;
        letter-spacing: 0.0875rem;
        text-transform: uppercase;
    }

    // .features__card-num
    &__card-num {}

    // .features__card-desc
    &__card-desc {
        color: #7C8698;
        font-size: 1rem;
        line-height: 100%;

    }
}
/* ... */

